// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day care frequency matches snapshot - A/B Test - growth-daycare-days-selector 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root makeStyles-careFreqWrapper-160 MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h2
        class="MuiTypography-root MuiTypography-h2 MuiTypography-colorTextPrimary"
      >
        Which days do you need to send them to daycare?
      </h2>
    </div>
    <ul
      class="MuiList-root makeStyles-rootInline-165 makeStyles-daysSelectorTestDaysPills-164 MuiList-padding"
    >
      <li
        class="MuiListItem-root makeStyles-root-166 pill MuiListItem-gutters"
      >
        <input
          class="makeStyles-input-169"
          id="selector.specificDays.0"
          name="specificDays"
          readonly=""
          type="checkbox"
          value="monday"
        />
        <div
          class="MuiBox-root MuiBox-root-177 makeStyles-controlIndicator-170 xs"
          tabindex="0"
        >
          <p
            class="MuiTypography-root makeStyles-body3-181 MuiTypography-body1"
          >
            Mon
          </p>
        </div>
      </li>
      <li
        class="MuiListItem-root makeStyles-root-166 pill MuiListItem-gutters"
      >
        <input
          class="makeStyles-input-169"
          id="selector.specificDays.1"
          name="specificDays"
          readonly=""
          type="checkbox"
          value="tuesday"
        />
        <div
          class="MuiBox-root MuiBox-root-192 makeStyles-controlIndicator-170 xs"
          tabindex="0"
        >
          <p
            class="MuiTypography-root makeStyles-body3-181 MuiTypography-body1"
          >
            Tue
          </p>
        </div>
      </li>
      <li
        class="MuiListItem-root makeStyles-root-166 pill MuiListItem-gutters"
      >
        <input
          class="makeStyles-input-169"
          id="selector.specificDays.2"
          name="specificDays"
          readonly=""
          type="checkbox"
          value="wednesday"
        />
        <div
          class="MuiBox-root MuiBox-root-193 makeStyles-controlIndicator-170 xs"
          tabindex="0"
        >
          <p
            class="MuiTypography-root makeStyles-body3-181 MuiTypography-body1"
          >
            Wed
          </p>
        </div>
      </li>
      <li
        class="MuiListItem-root makeStyles-root-166 pill MuiListItem-gutters"
      >
        <input
          class="makeStyles-input-169"
          id="selector.specificDays.3"
          name="specificDays"
          readonly=""
          type="checkbox"
          value="thursday"
        />
        <div
          class="MuiBox-root MuiBox-root-194 makeStyles-controlIndicator-170 xs"
          tabindex="0"
        >
          <p
            class="MuiTypography-root makeStyles-body3-181 MuiTypography-body1"
          >
            Thu
          </p>
        </div>
      </li>
      <li
        class="MuiListItem-root makeStyles-root-166 pill MuiListItem-gutters"
      >
        <input
          class="makeStyles-input-169"
          id="selector.specificDays.4"
          name="specificDays"
          readonly=""
          type="checkbox"
          value="friday"
        />
        <div
          class="MuiBox-root MuiBox-root-195 makeStyles-controlIndicator-170 xs"
          tabindex="0"
        >
          <p
            class="MuiTypography-root makeStyles-body3-181 MuiTypography-body1"
          >
            Fri
          </p>
        </div>
      </li>
    </ul>
    <label
      class="MuiFormControlLabel-root"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-196 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-199"
            data-indeterminate="false"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-root-201"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.6.75h12.8a4.8 4.8 0 014.85 4.85v12.8a4.8 4.8 0 01-4.85 4.85H5.6A4.8 4.8 0 01.75 18.4V5.6A4.93 4.93 0 015.6.75z"
              fill="#fff"
            />
            <path
              d="M18.4 23.27H5.6A4.88 4.88 0 01.73 18.4V5.6A4.93 4.93 0 015.6.73h12.8a4.88 4.88 0 014.87 4.87v12.8a4.88 4.88 0 01-4.87 4.87zM5.6 1.73A3.92 3.92 0 001.73 5.6v12.8a3.88 3.88 0 003.87 3.87h12.8a3.88 3.88 0 003.87-3.87V5.6a3.88 3.88 0 00-3.87-3.87z"
              fill="#23405f"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        Select all days
      </span>
    </label>
    <div
      class="MuiGrid-root makeStyles-nextButtonContainer-159 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled MuiButton-fullWidth Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Next
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Day care frequency matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root makeStyles-careFreqWrapper-2 MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h2
        class="MuiTypography-root MuiTypography-h2 MuiTypography-colorTextPrimary"
      >
        Which days do you need to send them to daycare?
      </h2>
    </div>
    <div
      class="MuiGrid-root makeStyles-frequency-4 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormGroup-root"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-8 Mui-checked MuiIconButton-colorSecondary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-10"
                name="careFrequency"
                type="radio"
                value="full-time"
              />
              <div
                class="PrivateRadioButtonIcon-root-11 PrivateRadioButtonIcon-checked-13"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-12"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            Every weekday (Monday to Friday)
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-10"
                name="careFrequency"
                type="radio"
                value="part-time"
              />
              <div
                class="PrivateRadioButtonIcon-root-11"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-12"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            Custom
          </span>
        </label>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-nextButtonContainer-1 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Next
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
